--- a/chepchat/package.json
+++ b/chepchat/package.json
@@ -38,7 +38,20 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-vector-icons": "^10.0.3",
+    "@react-native-async-storage/async-storage": "1.25.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "expo-image-picker": "~15.0.7",
+    "expo-av": "~14.0.7",
+    "expo-camera": "~16.0.8",
+    "expo-media-library": "~16.0.5",
+    "expo-notifications": "~0.29.9",
+    "expo-device": "~6.0.2",
+    "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
